client/style.less
@thumbnailDim: 216px;
@linkColor: DodgerBlue;
@highlight: #ffbd4a;
@almostBlack: #272822;
@editorColor: #aaaaaa; //#c1c7c7
@editorBackColor: @almostBlack; //#eaeaea;
@editorBorderColor: 1px solid #333326;
@editorHighlight: #D39322;
@unitColor: #E42669;

html {
	height: 100%;
}

body {
	font-family: Menlo, monospace;
	font-size: 9pt;
	text-align: left;
	color: @almostBlack;
	margin: 0;
	padding: 0;
	height: 100%;
}

.editor {
	color: @editorColor;
	background-color: @editorBackColor;
	border-bottom: @editorBorderColor;
	padding: 4px 12px;
	a {
		color: @editorColor;
		text-decoration: none;
	}
}

.header {
	margin: 12px;
	padding: 0px;

	display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
	display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
	display: -ms-flexbox;					/* TWEENER - IE 10 */
	display: -webkit-flex;				/* NEW - Chrome */
	display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */

	-webkit-flex-direction: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-align-items: flex-start;
	align-items: flex-start;

	font-family: 'Helvetica Neue';
	font-size: 24pt;
	.dblogo {
		font-weight: bold;
	}
	a {
		text-decoration: none;
		color: @almostBlack;
	}
	.headline{
		font-family: inherit;
		font-size: inherit;
		-webkit-flex-grow: 1;
		flex-grow: 1;
		.dblogo:hover {
			color: @almostBlack;
			background-color: @highlight;
			padding: 0 6px;
			margin: 0 -6px;
		}
		.dblogo:active {
			color: @highlight;
			background-color: @almostBlack;
		}
		.dblogo:visited {
			color: @almostBlack;
		}
	}
	.search {
		padding: 0px;
		border: 0px;
		-webkit-align-self: flex-end;
		align-self: flex-end;
		input[type=text]{
			color: @almostBlack;
			font-weight: bold;
			font-family: inherit;
			font-size: inherit;
			padding: 0px 6px;
			border: 0px;
			text-align: right;
		}
	}
}

.fourOhFour,
.addDoc {
	display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
	display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
	display: -ms-flexbox;					/* TWEENER - IE 10 */
	display: -webkit-flex;				/* NEW - Chrome */
	display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */

	-webkit-justify-content: center;
	justify-content: center;
	-webkit-align-items: center;
	align-items: center;
	margin: 0px;
	color: @editorColor;
	background-color: @editorBackColor;
	width: 100%;
	height: 100vh;

	a {
		color: inherit;
		text-decoration: none;
	}

	.fileUpload {
		position: relative;
		overflow: hidden;
		margin: 12px 12px 48px 12px;
		background-color: @editorBackColor;
		padding: 6px 12px;
		border: 1px solid @editorColor;
		border-radius: 6px;
		input.myPixInput {
			padding: 12px;position: absolute;
			top: 4px;
			left: -6px;
			padding: 0px;
			cursor: pointer;
			opacity: 0.0;
			filter: alpha(opacity=0);
		}
	}

	:hover {
		color: @editorBackColor;
		background-color: @editorColor;
	}

	:active {
		color: @editorBackColor;
		background-color: @editorHighlight;
		border-color: @editorHighlight;
	}

	input[type=file],
	input[type="button"],
	button {
		background-color: green;
		padding: 12px;
		font-family: Menlo, monospace;
		display: block !important;
	}
}

.showDocFull {
	margin: 12px;
	.docOverview {
		margin: 0px;
		img {
			border: 6px #eee solid;
		}
	}
}

.loginform {
	margin: 24px;
	ol {
		margin-top: 2em;
	}
	.adminHead {
		margin: 24px 0px;
	}
}

.container {
	display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
	display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
	display: -ms-flexbox;					/* TWEENER - IE 10 */
	display: -webkit-flex;				/* NEW - Chrome */
	display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */

	-webkit-flex-direction: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-align-items: flex-start;
	align-items: flex-start;

	.docinfo {
		margin: 0px;
		color: @editorColor;
		background-color: @editorBackColor;
		// background-color: orange;
		padding: 2px 8px 2px 0px;
		position: absolute;
		display: block;
		a {
			color: inherit;
			text-decoration: none;
		}
		.remove {
			color: @editorColor;
			background-color: @editorBackColor;
			padding: 2px 4px;
		}
	}
	.docbox {
		padding: 0px;
		margin: 3px;

		-webkit-flex-grow: 1;
		flex-grow: 1;

		overflow-x: hidden;
		overflow-y: hidden;
		width: @thumbnailDim;
		height: @thumbnailDim;

		display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
		display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
		display: -ms-flexbox;					/* TWEENER - IE 10 */
		display: -webkit-flex;				/* NEW - Chrome */
		display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */

		justify-content: center;

		figure {
			margin: 0;

			-webkit-flex-grow: 1;
			flex-grow: 1;

			display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
			display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
			display: -ms-flexbox;					/* TWEENER - IE 10 */
			display: -webkit-flex;				/* NEW - Chrome */
			display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */

			-webkit-align-items: center;
			align-items: center;
			-webkit-justify-content: center;
			justify-content: center;
			
			canvas {
				display: block;
			}

			img {
					display: block;
			}
		}
	}
}

.contentbackground {
	width: 100%;
	height:100%;
	.spriteBoxImage {
		width: 100%;
		height:100%;
		z-index: 0;

		-webkitflex-grow: 1;
		flex-grow: 1;
		
		display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
		display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
		display: -ms-flexbox;					/* TWEENER - IE 10 */
		display: -webkit-flex;				/* NEW - Chrome */
		display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */
		
		-webkit-justify-content: center;
		justify-content: center;
		-webkit-align-items: center;
		align-items: center;
		-webkit-flex-direction: column;
		flex-direction: column;
	}
}

.eboycopyright {
	position: fixed;
	right: 0px;
	padding: 6px 12px;
}

.spriteBoxInfoToggle {
	position: fixed;
	right: 0px;
	bottom: 0px;
	padding: 6px 12px;
}

.docMeta {
	background-color: @editorBackColor; //#171714
	border-top: @editorBorderColor;
	color: @editorColor;
	margin: 0px;
	left: 0px;
	bottom: 0px;
	position: fixed;
	z-index: 5;
	width: 100%;
	.property {
		color: @editorHighlight;
	}
	ol {
		margin: 0;
		padding: 12px 12px 18px 12px;
		li {
			list-style-type: none;
		}
		.tag:after {
			content: ','
		}
		.tag:last-of-type:after {
			content:''
		}
	}
	.remove {
		padding: 0px;
		opacity: 0.4;
	}
	.remove:hover {
		color: @editorHighlight;
		opacity: 1;
		cursor: pointer;
	}
	a {
		color: #aaa;
	}
	.editMeta {
		font-size: 18px;
		padding: 12px;
		border-top: @editorBorderColor;
		border-bottom: @editorBorderColor;
		input[type=text] {
			margin: 0px;
			padding: 2px;
			border: 0px;
			font-family: inherit;
			font-size: inherit;
			color: inherit;
			background-color: inherit;
		}
	}
	input[type=checkbox] {
		margin: 0px;
		color: red;
	}
}

.unit {
	color: @unitColor;
}

.myPixInput {
	padding: 12px 10px;
	background-color: nonce;
}

.paging {
	background-color: none;
	padding: 12px;
}

.previous:hover, .next:hover {
	color: @editorBackColor;
	background-color: @highlight; //#c1c7c7
	padding: 3px 6px;
	margin: -3px -6px;
}

.previous:active, .next:active {
	color: @highlight;
	background-color: @editorBackColor;
}

